test/fail/adt_type_infer04.v3
//@seman

type A<T> {
	case B(t: T);
	case C(i: int);
}

def f(i: int) -> A<u4> {
	if (i < 9) {
		return A.B(u4.view(i));
	} else {
		return A.C(i);
	}
}

def g() -> A<u8> {
	def a = f(10);
	match (a) {
		A.B(t) => return A.B(u8.view(t));
		A.C(i) => return A.C(i);
	}
}

def main() -> int {
	def a = g();
	match (a) {
		x: A<u8>.B => return int.view(x.t);
		x: A<u8>.C => return x.i;
	}
}
